Added home work 5 with out map wrap to container

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,10 +15,9 @@
                 <a href="index.html">Main</a>
                 <a href="contacts.html">Contacts</a>
             </div>
-
-            <div class="main">
-                <h1 class="main_heading-1">Мой первый сайт</h1>
-                <p class="paragraph main_paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            <div class="main container">
+                <h1 class="main_heading">New Automation Tool for Your</h1>
+                <p class=" main_paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                     Perspiciatis provident beatae magnam! Veritatis
                     corporis tempora optio ullam aut voluptas maxime omnis harum, repudiandae vel minus, velita.
                     Distinctio,
@@ -27,82 +27,80 @@
         </div>
     </div>
 
-    <div class="about">
-        <div class="container">
-            <h3 class="about_heading-3 heading-3">Описание сайта</h3>
+    <div class="about container">
+        <div class="What-we-do container">
+            <h3 class="What-we-do_heading">What we do to help our client</h3>
+        </div>
+
+        <div class="description ">
+            <div class="description_card">
+                <div class="container">
+                    <h4 class="description_heading">Make Your bisiness To Be Better Famous</h4>
+                    <p class="description_paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing
+                        elit. Tenetur minima laboriosam esse quisquam quaerat quis facilis dolorem? Tempore
+                        consequatur
+                        modi
+                        ipsa assumenda voluptates, saepe iusto rerum
+                        possimus repellendus porro accusamus!</p>
+                </div>
+            </div>
+
+            <div class="description_card">
+                <div class="container">
+                    <h4 class="description_heading">Bring Technology To Your Home</h4>
+                    <p class="description_paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing
+                        elit. Tenetur minima laboriosam esse quisquam quaerat quis facilis dolorem? Tempore
+                        consequatur
+                        modi
+                        ipsa assumenda voluptates, saepe iusto rerum
+                        possimus repellendus porro accusamus!</p>
+                </div>
+            </div>
+
+            <div class="description_card">
+                <div class="container">
+                    <h4 class="description_heading">Build Your Digital Product</h4>
+                    <p class="description_paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                        Tenetur
+                        minima laboriosam esse quisquam quaerat quis facilis dolorem? Tempore consequatur modi ipsa
+                        assumenda voluptates, saepe iusto rerum possimus repellendusporro accusamus!</p>
+                </div>
+            </div>
         </div>
     </div>
 
-    <div class="description container">
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <div class="description_card">
-                        <h4 class="description_heading-4 heading-4">Парные и одиночные теги</h4>
-                        <p class="description_paragraph paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing
-                            elit. Tenetur minima laboriosam esse quisquam quaerat quis
-                            facilis dolorem? Tempore consequatur modi ipsa assumenda voluptates, saepe iusto rerum
-                            possimus repellendus
-                            porro accusamus!</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col">
-                    <div class="description_card">
-                        <h4 class="description_heading-4 heading-4">Парные и одиночные теги</h4>
-                        <p class="description_paragraph paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing
-                            elit. Tenetur minima laboriosam esse quisquam quaerat quis
-                            facilis dolorem? Tempore consequatur modi ipsa assumenda voluptates, saepe iusto rerum
-                            possimus repellendus
-                            porro accusamus!</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col">
-                    <div class="description_card">
-                        <h4 class="description_heading-4 heading-4">Парные и одиночные теги</h4>
-                        <p class="description_paragraph paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing
-                            elit. Tenetur minima laboriosam esse quisquam quaerat quis
-                            facilis dolorem? Tempore consequatur modi ipsa assumenda voluptates, saepe iusto rerum
-                            possimus repellendus
-                            porro accusamus!</p>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </div>
-
-    <div class="project">
-        <div class="container">
-            <h3 class="project_heading-3 heading-3">Ещё немного текста</h3>
-            <p class="project_paragraph paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-        </div>
+    <div class="project container">
+        <h3 class="project_heading">Our Finished Project</h3>
+        <p class="project_paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore ratione aspernatur
+            atque incidunt? Corporis, vitae?</p>
     </div>
 
     <div class="footer">
         <div class="container">
             <div class="footer_woek">
-                <h3 class="footer_woek_heading-3 heading-3">Ещё текст</h3>
-                <p class="footer_woek_paragraph paragraph">Libero veritatis error, natus impedit quibusdam in sed
-                    veniam...</p>
-            </div>
-            <hr>
-            <div class="footer_contacts">
-                <ul>
-                    <li>Ivanov Sergey Vasilevich (work)</li>
-                    <li>08654864351</li>
-                    <li>115sergey@gmail.com</li>
-                </ul>
-            </div>
-            <div class="footer_rights">
-                <p class="footer_rights_paragraph paragraph">Все права защищены!</p>
+                <div class="container"></div>
+                <h3 class="footer_woek_heading">Interested to woek with our team</h3>
+                <p class="footer_woek_paragraph">Libero veritatis error, natus impedit quibusdam in sed veniam...
+                </p>
             </div>
         </div>
     </div>
+    <hr>
+    <div class="footer_contacts">
+        <div class="container">
+            <ul class="footer_contacts_list">
+                <li>Ivanov Sergey Vasilevich (work)</li>
+                <li>08654864351</li>
+                <li>115sergey@gmail.com</li>
+            </ul>
+        </div>
+    </div>
+    <div class="footer_rights container">
+        <p class="footer_rights_paragraph paragraph">Все права защищены!</p>
+    </div>
+    </div>
+
+    </div>
 </body>
+
 </html>
