--- a/contacts.html
+++ b/contacts.html
@@ -9,57 +9,57 @@
 </head>
 
 <body>
-    <div class="main_div">
-        <div class="container">
-            <div class="menu">
-                <a href="index.html">Main</a>
-                <a href="contacts.html">Contacts</a>
-            </div>
-            <div class="main container">
-                <h1 class="main_heading-1">Contact Us</h1>
-                <p class=" main_paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Perspiciatis provident beatae magnam! Veritatis
-                    corporis tempora optio ullam aut voluptas maxime omnis harum, repudiandae vel minus, velita.
-                    Distinctio,
-                    ratione praesentium!
-                </p>
-            </div>
+    <div class="menu_div container">
+
+        <div class="menu">
+            <a href="index.html">Main</a>
+            <a href="contacts.html">Contacts</a>
         </div>
     </div>
-
-    <div class="contact">
-        <div class="contact_us ">
-            <img src="img/facetime.png" alt="facetime">
-            <h4 class="contact_us_heading">Address </h4>
-            <p class="contact_us_paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
-            <h4 class="contact_us_heading">Phone</h4>
-            <ul>
-                <li>0587452458212</li>
-                <li>8951478525584</li>
-                <li>8541545785575</li>
-            </ul>
-            <h4 class="contact_us_heading">Online service</h4>
-            <ul>
-                <li><a href="https://google.com" target="blank">Google</a></li>
-                <li><a href="115sergey@gmail.com" target="blank">Email</a></li>
-            </ul>
-
+    <div class="main">
+        <div class="container">
+            <h1 class="main_heading-1">Contact Us</h1>
+            <p class=" main_paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Perspiciatis provident beatae magnam! Veritatis
+                corporis tempora optio ullam aut voluptas maxime omnis harum, repudiandae vel minus, velita.
+                Distinctio,
+                ratione praesentium!
+            </p>
         </div>
-        <div class="contact_us_form ">
+    </div>
+    <form action="#">
 
-            <h4 class="send_us_heading">Send us message</h4>
-            <form action="#">
+        <div class="contact">
+            <div class="contact_us ">
+                <img src="img/facetime.png" alt="facetime">
+                <h4 class="contact_us_heading">Address </h4>
+                <p class="contact_us_paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+                <h4 class="contact_us_heading">Phone</h4>
+                <ul>
+                    <li>0587452458212</li>
+                    <li>8951478525584</li>
+                    <li>8541545785575</li>
+                </ul>
+                <h4 class="contact_us_heading">Online service</h4>
+                <ul>
+                    <li><a href="https://google.com" target="blank">Google</a></li>
+                    <li><a href="115sergey@gmail.com" target="blank">Email</a></li>
+                </ul>
+            </div>
+
+            <div class="contact_us_form ">
+                <h4 class="send_us_heading">Send us message</h4>
+
                 Full Name <input class="send_us_input" type="text" placeholder="Enter your full name"><br>
                 Email <input class="send_us_input" type="email" placeholder="Enter your email"><br>
                 Message <br>
                 <textarea class="send_us_input" cols="30" rows="10" placeholder="Enter your message"></textarea><br>
                 <button class="send_us_button" type="submit">Send</button>
-            </form>
+            </div>
         </div>
-    </div>
-
-    <div class="map container">
-        <script class="map_style " type="text/javascript" charset="utf-8" async
+    </form>
+    <div class="map container"> 
+        <script class="map_style" type="text/javascript" charset="utf-8" async
             src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A655830c46e4741cf12a5eb3d81af90791913c00394bf1d1c46804ee83047fb57&amp;width=500&amp;height=400&amp;lang=ru_RU&amp;scroll=true">
         </script>
     </div>
@@ -67,24 +67,24 @@
     <div class="footer">
         <div class="container">
             <div class="footer_woek">
-                <h3 class="footer_woek_heading">Interested to woek with our team</h3>
-                <p class="footer_woek_paragraph">Libero veritatis error, natus impedit quibusdam in sed veniam...
-                </p>
+                <div class="container">
+                    <h3 class="footer_woek_heading">Interested to woek with our team</h3>
+                    <p class="footer_woek_paragraph">Libero veritatis error, natus impedit quibusdam in sed veniam...
+                    </p>
+                </div>
             </div>
-            <hr>
-            <div class="footer_contacts">
-
+        </div>
+        <hr>
+        <div class="footer_contacts">
+            <div class="container">
                 <ul class="footer_contacts_list">
                     <li>Ivanov Sergey Vasilevich (work)</li>
                     <li>08654864351</li>
                     <li>115sergey@gmail.com</li>
                 </ul>
-
             </div>
             <div class="footer_rights container">
-
-                <p class="footer_rights_paragraph">Все права защищены!</p>
-
+                <p class="footer_rights_paragraph paragraph">Все права защищены!</p>
             </div>
         </div>
     </div>
