--- a/index.html
+++ b/index.html
@@ -27,13 +27,10 @@
         </div>
     </div>
 
-    <div class="about container">
-        <div class="What-we-do container">
-            <h3 class="What-we-do_heading">What we do to help our client</h3>
-        </div>
-
-        <div class="description ">
-            <div class="description_card">
+    <div class="What-we-do container">
+        <h3 class="What-we-do_heading">What we do to help our client</h3>
+        <div class="description_block ">
+            <div class="description_block_card">
                 <div class="container">
                     <h4 class="description_heading">Make Your bisiness To Be Better Famous</h4>
                     <p class="description_paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing
@@ -45,7 +42,7 @@
                 </div>
             </div>
 
-            <div class="description_card">
+            <div class="description_block_card">
                 <div class="container">
                     <h4 class="description_heading">Bring Technology To Your Home</h4>
                     <p class="description_paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing
@@ -57,7 +54,7 @@
                 </div>
             </div>
 
-            <div class="description_card">
+            <div class="description_block_card">
                 <div class="container">
                     <h4 class="description_heading">Build Your Digital Product</h4>
                     <p class="description_paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
@@ -78,28 +75,28 @@
     <div class="footer">
         <div class="container">
             <div class="footer_woek">
-                <div class="container"></div>
-                <h3 class="footer_woek_heading">Interested to woek with our team</h3>
-                <p class="footer_woek_paragraph">Libero veritatis error, natus impedit quibusdam in sed veniam...
-                </p>
+                <div class="container">
+                    <h3 class="footer_woek_heading">Interested to woek with our team</h3>
+                    <p class="footer_woek_paragraph">Libero veritatis error, natus impedit quibusdam in sed veniam...
+                    </p>
+                </div>
             </div>
         </div>
-    </div>
-    <hr>
-    <div class="footer_contacts">
-        <div class="container">
-            <ul class="footer_contacts_list">
-                <li>Ivanov Sergey Vasilevich (work)</li>
-                <li>08654864351</li>
-                <li>115sergey@gmail.com</li>
-            </ul>
+    
+        <hr>
+        <div class="footer_contacts">
+            <div class="container">
+                <ul class="footer_contacts_list">
+                    <li>Ivanov Sergey Vasilevich (work)</li>
+                    <li>08654864351</li>
+                    <li>115sergey@gmail.com</li>
+                </ul>
+            </div>
+        
+            <div class="footer_rights container">
+                <p class="footer_rights_paragraph paragraph">Все права защищены!</p>
+            </div>
         </div>
-    </div>
-    <div class="footer_rights container">
-        <p class="footer_rights_paragraph paragraph">Все права защищены!</p>
-    </div>
-    </div>
-
     </div>
 </body>
 
