--- a/contacts.html
+++ b/contacts.html
@@ -59,8 +59,7 @@
         </div>
     </form>
     <div class="map container"> 
-        <script class="map_style" type="text/javascript" charset="utf-8" async
-            src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A655830c46e4741cf12a5eb3d81af90791913c00394bf1d1c46804ee83047fb57&amp;width=500&amp;height=400&amp;lang=ru_RU&amp;scroll=true">
+        <script class="map_style" type="text/javascript" charset="utf-8" async    src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A655830c46e4741cf12a5eb3d81af90791913c00394bf1d1c46804ee83047fb57&amp;width=1140&amp;height=400&amp;lang=ru_RU&amp;scroll=true">
         </script>
     </div>
 
