--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
                 <a href="index.html">Main</a>
                 <a href="contacts.html">Contacts</a>
             </div>
-            <div class="main container">
-                <h1 class="main_heading">New Automation Tool for Your</h1>
-                <p class=" main_paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            <div class="main">
+                <div class="container">
+                    <h1 class="main_heading">New Automation Tool for Your</h1>
+                    <p class=" main_paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                     Perspiciatis provident beatae magnam! Veritatis
                     corporis tempora optio ullam aut voluptas maxime omnis harum, repudiandae vel minus, velita.
                     Distinctio,
                     ratione praesentium!
                 </p>
+                </div> 
             </div>
         </div>
     </div>
