home work 6. Maket main and contacts

--- a/index.html
+++ b/index.html
@@ -9,94 +9,93 @@
 </head>
 
 <body>
-    <div class="main_div">
-        <div class="container">
-            <div class="menu">
-                <a href="index.html">Main</a>
-                <a href="contacts.html">Contacts</a>
+    <div class="top">
+        <div class="container top-box">
+            <div class="header">
+                <a href="index.html"><img src="img/logo.svg" alt="main page"></a>
+                <a href="contacts.html"><img src="img/contacts.svg" alt="contacts"></a>
             </div>
-            <div class="main">
-                <div class="container">
-                    <h1 class="main_heading">New Automation Tool for Your</h1>
-                    <p class=" main_paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Perspiciatis provident beatae magnam! Veritatis
-                    corporis tempora optio ullam aut voluptas maxime omnis harum, repudiandae vel minus, velita.
-                    Distinctio,
-                    ratione praesentium!
-                </p>
-                </div> 
+            <div class="top-info">
+                <h1 class="top_heading">New Automation Tool for Your</h1>
+                <p class="text top_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo illo libero
+                    aperiam
+                    praesentium cum aliquid, nihil accusantium commodi officia eos repudiandae?</p>
+                <a class="top_button" href="#">See Our Project</a>
             </div>
         </div>
     </div>
 
-    <div class="What-we-do container">
-        <h3 class="What-we-do_heading">What we do to help our client</h3>
-        <div class="description_block ">
-            <div class="description_block_card">
-                <div class="container">
-                    <h4 class="description_heading">Make Your bisiness To Be Better Famous</h4>
-                    <p class="description_paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing
-                        elit. Tenetur minima laboriosam esse quisquam quaerat quis facilis dolorem? Tempore
-                        consequatur
-                        modi
-                        ipsa assumenda voluptates, saepe iusto rerum
-                        possimus repellendus porro accusamus!</p>
-                </div>
+    <div class="what-we-do container">
+        <h3 class="heading">What we do to help our client grow in digital era</h3>
+        <div class="card-box ">
+            <div class="card">
+                <img class="card_img" src="img/men-1.png" alt="men">
+                <h4 class="heading-mini">Make Your business To Be Better Famous In Internet</h4>
+                <p class="text card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. </p>
+                <a class="card-link" href="#">Learn more <img src="img\vector.png" alt="vector"></a>
             </div>
-
-            <div class="description_block_card">
-                <div class="container">
-                    <h4 class="description_heading">Bring Technology To Your Home</h4>
-                    <p class="description_paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing
-                        elit. Tenetur minima laboriosam esse quisquam quaerat quis facilis dolorem? Tempore
-                        consequatur
-                        modi
-                        ipsa assumenda voluptates, saepe iusto rerum
-                        possimus repellendus porro accusamus!</p>
-                </div>
+            <div class="card">
+                <img class="card_img" src="img/gingit-2.png" alt="gingit girl">   
+                <h4 class="heading-mini">Bring Technology To Your Home</h4>
+                <p class="text card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. </p>
+                <a class="card-link" href="#">Learn more <img src="img\vector.png" alt="vector"></a>
             </div>
-
-            <div class="description_block_card">
-                <div class="container">
-                    <h4 class="description_heading">Build Your Digital Product</h4>
-                    <p class="description_paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                        Tenetur
-                        minima laboriosam esse quisquam quaerat quis facilis dolorem? Tempore consequatur modi ipsa
-                        assumenda voluptates, saepe iusto rerum possimus repellendusporro accusamus!</p>
-                </div>
+            <div class="card">
+                <img class="card_img" src="img/leptop-3.png" alt="girl with leptop">
+                <h4 class="heading-mini">Build Your Digital Product That Suitable For Your Need</h4>
+                <p class="text card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. </p>
+                <a class="card-link" href="#">Learn more <img src="img\vector.png" alt="vector"></a>
             </div>
         </div>
     </div>
 
     <div class="project container">
-        <h3 class="project_heading">Our Finished Project</h3>
-        <p class="project_paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore ratione aspernatur
-            atque incidunt? Corporis, vitae?</p>
+        <h3 class="heading project-heading">Our Finished Project</h3>
+        <p class="text project-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> 
+        <div class="project_item">
+            <img src="img/background/smart-home.png" alt="smart-home" class="project_img">
+            <p class="project_text">Smart Home Installation</p>
+        </div>
+        <div class="project_parent">
+            <div class="sparklite">
+                <img src="img/background/sparklite.png" alt="sparklite" class="project_img">
+                <p class="sparklite-text">Sparklite App</p>
+            </div>
+            <div class="car">
+                <img src="img/background/car.png" alt="car" class="project_img">
+                <p class="car-text">Car-Rapetition App</p>
+            </div>
+        </div>
     </div>
 
     <div class="footer">
         <div class="container">
-            <div class="footer_woek">
-                <div class="container">
-                    <h3 class="footer_woek_heading">Interested to woek with our team</h3>
-                    <p class="footer_woek_paragraph">Libero veritatis error, natus impedit quibusdam in sed veniam...
+            <div class="footer-woek">
+                <div class="footer-woek_block">
+                    <h3 class="footer-woek_heading">Interested to woek with our team?</h3>
+                    <p class="text footer-woek_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
                     </p>
                 </div>
+                <div class="footer-woek_block">
+                   <a href="#" class="footer-woek_link">Let’s Talk
+                </a> 
+                </div>      
             </div>
         </div>
-    
         <hr>
-        <div class="footer_contacts">
+        <div class="footer-contacts">
             <div class="container">
-                <ul class="footer_contacts_list">
-                    <li>Ivanov Sergey Vasilevich (work)</li>
-                    <li>08654864351</li>
-                    <li>115sergey@gmail.com</li>
-                </ul>
+                <ol class="list">
+                    <li class="text footer-contacts_text">Ivanov Sergey Vasilevich (work)</li>
+                    <li class="text footer-contacts_text"><a class="text footer-contacts_text none-decoration" href="#">08654864351</a></li> 
+                    <li class="text footer-contacts_text"><a class="text footer-contacts_text none-decoration" href="#">115sergey@gmail.com</a></li>               
+                </ol>
             </div>
-        
-            <div class="footer_rights container">
-                <p class="footer_rights_paragraph paragraph">Все права защищены!</p>
+            <div class="footer-rights container">
+                <p class="text footer-rights_text">2021 All rights reserved.</p>
             </div>
         </div>
     </div>
