--- a/contacts.html
+++ b/contacts.html
@@ -9,81 +9,89 @@
 </head>
 
 <body>
-    <div class="menu_div container">
+    <div class="top top-contact">
+        <div class="container top-box">
+            <div class="header">
+                <a href="index.html"><img src="img/logo.svg" alt="main page"></a>
+                <a href="contacts.html"><img src="img/contacts.svg" alt="contacts"></a>
+            </div>
+            <div class="top-contact-info">
+                <h1 class="top-contact-info_heading">Contact Us</h1>
+                <p class="top-contact-info_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua.
+                </p>
 
-        <div class="menu">
-            <a href="index.html">Main</a>
-            <a href="contacts.html">Contacts</a>
-        </div>
-    </div>
-    <div class="main">
-        <div class="container">
-            <h1 class="main_heading-1">Contact Us</h1>
-            <p class=" main_paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Perspiciatis provident beatae magnam! Veritatis
-                corporis tempora optio ullam aut voluptas maxime omnis harum, repudiandae vel minus, velita.
-                Distinctio,
-                ratione praesentium!
-            </p>
+            </div>
         </div>
     </div>
     <form action="#">
-
         <div class="contact">
-            <div class="contact_us ">
-                <img src="img/facetime.png" alt="facetime">
-                <h4 class="contact_us_heading">Address </h4>
-                <p class="contact_us_paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
-                <h4 class="contact_us_heading">Phone</h4>
-                <ul>
-                    <li>0587452458212</li>
-                    <li>8951478525584</li>
-                    <li>8541545785575</li>
+            <div class="contact-us">
+                <img class="contact-us_img" src="img/contact-img.png" alt="facetime">
+                <h4 class="contact-us_heading">Address </h4>
+                <p class="text contact-us_text">Id convallis placerat sit sed duis id amet volutpat quam a, pharetra.</p>
+                <h4 class="contact-us_heading">Phone</h4>
+                <ul class="contact-list text">
+                    <li><a class="contact-list_text text" href="#">+7-812-7313-4321</a></li>
+                    <li><a class="contact-list_text text" href="#">+7-817-0000-1234</a></li>
                 </ul>
-                <h4 class="contact_us_heading">Online service</h4>
-                <ul>
-                    <li><a href="https://google.com" target="blank">Google</a></li>
-                    <li><a href="115sergey@gmail.com" target="blank">Email</a></li>
+                <h4 class="contact-us_heading">ONLINE SERVICE</h4>
+                <ul class="contact-list text">
+                    <li><a class="online-list_text text" href="https://google.com" target="blank">www.site.com</a></li>
+                    <li><a class="online-list_text text" href="115sergey@gmail.com" target="blank">hello.site@gmail.com </a></li>
                 </ul>
             </div>
 
-            <div class="contact_us_form ">
-                <h4 class="send_us_heading">Send us message</h4>
-
-                Full Name <input class="send_us_input" type="text" placeholder="Enter your full name"><br>
-                Email <input class="send_us_input" type="email" placeholder="Enter your email"><br>
-                Message <br>
-                <textarea class="send_us_input" cols="30" rows="10" placeholder="Enter your message"></textarea><br>
-                <button class="send_us_button" type="submit">Send</button>
+            <div class="contact-us-form">
+                <h4 class="contact-us-form_heading">Send us message</h4>
+                <label for="full-name" class="contact-us-form_small-heading">Full Name</label><br>
+                <input id="full-name"
+                class="contact-us-form_input" type="text" placeholder="Enter your full name"></label><br>
+                <label for="email" class="contact-us-form_small-heading">Email</label><br>
+                <input id="email"
+                class="contact-us-form_input" type="text" placeholder="Enter your full name"></label><br>
+                <label for="message" class="contact-us-form_small-heading">Message</label><br>
+                <textarea id="message"
+                class="contact-us-form_input" 
+                cols="30" rows="10"
+                placeholder="Enter your message"></textarea><br>
+                <button class="contact-us-form_button" type="submit">SUBMIT</button>
             </div>
         </div>
     </form>
-    <div class="map container"> 
-        <script class="map_style" type="text/javascript" charset="utf-8" async    src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A655830c46e4741cf12a5eb3d81af90791913c00394bf1d1c46804ee83047fb57&amp;width=1140&amp;height=400&amp;lang=ru_RU&amp;scroll=true">
+
+    <div class="map container">
+        <script type="text/javascript" charset="utf-8" async
+            src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A655830c46e4741cf12a5eb3d81af90791913c00394bf1d1c46804ee83047fb57&amp;width=100%&amp;height=400&amp;lang=ru_RU&amp;scroll=true">
         </script>
     </div>
 
     <div class="footer">
         <div class="container">
-            <div class="footer_woek">
-                <div class="container">
-                    <h3 class="footer_woek_heading">Interested to woek with our team</h3>
-                    <p class="footer_woek_paragraph">Libero veritatis error, natus impedit quibusdam in sed veniam...
+            <div class="footer-woek">
+                <div class="footer-woek_block">
+                    <h3 class="footer-woek_heading">Interested to woek with our team?</h3>
+                    <p class="text footer-woek_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
                     </p>
+                </div>
+                <div class="footer-woek_block">
+                    <a href="#" class="footer-woek_link">Let’s Talk
+                    </a>
                 </div>
             </div>
         </div>
         <hr>
-        <div class="footer_contacts">
+        <div class="footer-contacts">
             <div class="container">
-                <ul class="footer_contacts_list">
-                    <li>Ivanov Sergey Vasilevich (work)</li>
-                    <li>08654864351</li>
-                    <li>115sergey@gmail.com</li>
-                </ul>
+                <ol class="list">
+                    <li class="text footer-contacts_text">Ivanov Sergey Vasilevich (work)</li>
+                    <li class="text footer-contacts_text"><a class="text footer-contacts_text none-decoration" href="#">08654864351</a></li> 
+                    <li class="text footer-contacts_text"><a class="text footer-contacts_text none-decoration" href="#">115sergey@gmail.com</a></li>  
+                </ol>
             </div>
-            <div class="footer_rights container">
-                <p class="footer_rights_paragraph paragraph">Все права защищены!</p>
+            <div class="footer-rights container">
+                <p class="text footer-rights_text">2021 All rights reserved.</p>
             </div>
         </div>
     </div>
