tabel bag fixed

--- a/contacts.html
+++ b/contacts.html
@@ -25,7 +25,7 @@
         </div>
     </div>
     <form action="#">
-        <div class="contact">
+        <div class="contact container">
             <div class="contact-us">
                 <img class="contact-us_img" src="img/contact-img.png" alt="facetime">
                 <h4 class="contact-us_heading">Address </h4>
