home work 7 witch contact page

--- a/index.html
+++ b/index.html
@@ -90,8 +90,9 @@
                     </p>
                 </div>
                 <div class="footer-woek_block">
-                    <button><a href="#" class="footer-woek_button">Let’s Talk
-                    </a></button>
+                    <button>
+                        <a class="footer-woek_button" href="#">Let’s Talk</a>
+                        </button>
                 </div>
             </div>
         </div>
