some bugs fixed, pictures converted by TinyPng

--- a/contacts.html
+++ b/contacts.html
@@ -62,7 +62,7 @@
             </form>
         
             <div class="map container">
-                <script type="text/javascript" charset="utf-8" async
+                <script charset="utf-8" async
                     src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A655830c46e4741cf12a5eb3d81af90791913c00394bf1d1c46804ee83047fb57&amp;width=100%&amp;height=400&amp;lang=ru_RU&amp;scroll=true">
                 </script>
             </div>
@@ -79,8 +79,8 @@
                     </p>
                 </div>
                 <div class="footer-woek_block">
-                    <button><a href="#" class="footer-woek_button">Let’s Talk
-                    </a></button>
+                    <a href="#" class="footer-woek_button">Let’s Talk
+                    </a>
                 </div>
             </div>
         </div>
