--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <p class="text card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                             eiusmod
                             tempor incididunt ut labore et dolore magna aliqua. </p>
-                        <a class="card-link" href="#">Learn more <img src="img\vector.png" alt="vector"></a>
+                        <a class="card-link" href="#">Learn more <img src="img/vector.png" alt="vector"></a>
                     </div>
                     <div class="card">
                         <img class="card_img" src="img/gingit-2.png" alt="gingit girl">
@@ -45,7 +45,7 @@
                         <p class="text card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                             eiusmod
                             tempor incididunt ut labore et dolore magna aliqua. </p>
-                        <a class="card-link" href="#">Learn more <img src="img\vector.png" alt="vector"></a>
+                        <a class="card-link" href="#">Learn more <img src="img/vector.png" alt="vector"></a>
                     </div>
                     <div class="card">
                         <img class="card_img" src="img/leptop-3.png" alt="girl with leptop">
@@ -53,7 +53,7 @@
                         <p class="text card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                             eiusmod
                             tempor incididunt ut labore et dolore magna aliqua. </p>
-                        <a class="card-link" href="#">Learn more <img src="img\vector.png" alt="vector"></a>
+                        <a class="card-link" href="#">Learn more <img src="img/vector.png" alt="vector"></a>
                     </div>
                 </div>
             </div>
@@ -90,9 +90,9 @@
                     </p>
                 </div>
                 <div class="footer-woek_block">
-                    <button>
-                        <a class="footer-woek_button" href="#">Let’s Talk</a>
-                        </button>
+                    
+                    <a class="footer-woek_button" href="#">Let’s Talk</a>
+                        
                 </div>
             </div>
         </div>
